<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/coloripple"
        android:fontFamily="@font/robotomedium"
        android:text="@string/transactionName"
        android:textColor="@color/color1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoregular"
        android:lineSpacingExtra="3dp"
        android:text="@string/transactionDescription" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/standarddrawableripple"
        android:fontFamily="@font/robotomedium"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="7dp"
        android:text="@string/seetransactions"
        android:textColor="@color/color1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/coloripple"
        android:fontFamily="@font/robotomedium"
        android:text="@string/profileName"
        android:textColor="@color/color1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoregular"
        android:lineSpacingExtra="3dp"
        android:text="@string/profileDescription" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/standarddrawableripple"
        android:fontFamily="@font/robotomedium"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="7dp"
        android:text="@string/seeprofile"
        android:textColor="@color/color1" />

</LinearLayout>